--- a/src/layout/layout.module.css
+++ b/src/layout/layout.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   display: grid;
-  grid-template: 'header header header' auto '. body .' 1fr 'footer footer footer' auto / auto minmax(320px, 992px) auto;
+  grid-template: 'header header header' auto '. body .' 1fr 'footer footer footer' auto / auto 992px auto;
   gap: 0;
   min-height: 100vh;
 }
@@ -20,7 +20,7 @@
   background-color: var(--primary);
 }
 
-@media (width <= 768px) {
+@media (width <= 992px) {
   .wrapper {
     grid-template-columns: minmax(320px, 1fr);
     grid-template-areas:
