feat: update Product Page, add Ratinng and Tag components
dz-02

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -23,5 +23,6 @@ p {
   --primary-dark: #ffaa0d;
   --primary-light: #fff5c0;
   --red: #f44336;
+  --white: #ffffff;
   --font-family: 'Nunito', 'Helvetica', sans-serif;
 }
