--- a/src/atoms/Input/Input.module.css
+++ b/src/atoms/Input/Input.module.css
@@ -1,12 +1,12 @@
 .input {
   height: 48px;
-  padding: 20px;
+  padding: 10px 20px;
   color: var(--text-main);
   font-size: 16px;
   font-family: var(--font-family);
   background: var(--text-white);
   border: none;
-  border-radius: 40px;
+  border-radius: 20px;
   outline-color: var(--primary);
   box-shadow: 0 4px 4px rgb(0 0 0 / 5%);
 }
