feat: add Cart Products Counter to Header

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -24,5 +24,6 @@ p {
   --primary-light: #fff5c0;
   --red: #f44336;
   --white: #ffffff;
+  --green: #01a54e;
   --font-family: 'Nunito', 'Helvetica', sans-serif;
 }
